test/bad/classes/name05.px

class A def
    _: Bool
